k3s/demoapps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx-svc
spec:
  selector:
    app: demo-nginx
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
