k3s/demoapps/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: demo-nginx.infra-labs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-nginx-svc
                port:
                  number: 80
